--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
 	"version": "1.0.0",
 	"description": "textwall server",
 	"dependencies": {
-		"ws": "^8.12.1",
 		"better-sqlite3": "^12.2.0",
-		"express": "^5.1.0"
+		"cookie-parser": "^1.4.7",
+		"express": "^5.1.0",
+		"ws": "^8.12.1"
 	},
 	"private": true
 }
